# android_mnn

./: readme.md
YOLOV5/: build.gradle  settings.gradle
YOLOV5/app/: build.gradle
YOLOV5/app/includes/: readme.txt
YOLOV5/app/libs/: readme.txt
YOLOV5/app/src/androidTest/java/com/example/yolov5/: ExampleInstrumentedTest.java
YOLOV5/app/src/main/: AndroidManifest.xml
YOLOV5/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  yoloInference.cpp  yoloInference.h
YOLOV5/app/src/main/java/com/example/yolov5/: MainActivity.java
YOLOV5/app/src/main/res/layout/: activity_main.xml
YOLOV5/gradle/wrapper/: gradle-wrapper.properties
